@@ -390,20 +390,20 @@ class TestTextParagraphs(unittest.TestCase):
         # noinspection PyTypeChecker
         Hydrogens(cif, paragraph=self.paragraph)
         self.assertEqual(('All C-bound hydrogen atoms were refined with isotropic displacement '
-                          'parameters. Some were refined freely and some on calculated positions using '
-                          'a riding model with their Uiso values constrained to 1.5 times the Ueq of '
-                          'their pivot atoms for terminal sp3 carbon atoms and 1.2 times for all other '
-                          'carbon atoms.'), self.paragraph.text)
+                          'parameters. Some of their coordinates were refined freely and some on '
+                          'calculated positions using a riding model with their Uiso values constrained '
+                          'to 1.5 times the Ueq of their pivot atoms for terminal sp3 carbon atoms and '
+                          '1.2 times for all other carbon atoms.'), self.paragraph.text)
 
     def test_hydrogens_some_riding_some_isotropic(self):
         cif = CifContainer(data / 'test-data/hydrogen/some_riding_some_isotropic.cif')
         # noinspection PyTypeChecker
         Hydrogens(cif, paragraph=self.paragraph)
         self.assertEqual(('All C-bound hydrogen atoms were refined with isotropic displacement '
-                          'parameters. Some were refined freely and some on calculated positions using '
-                          'a riding model with their Uiso values constrained to 1.5 times the Ueq of '
-                          'their pivot atoms for terminal sp3 carbon atoms and 1.2 times for all other '
-                          'carbon atoms.'), self.paragraph.text)
+                          'parameters. Some of their coordinates were refined freely and some on '
+                          'calculated positions using a riding model with their Uiso values constrained '
+                          'to 1.5 times the Ueq of their pivot atoms for terminal sp3 carbon atoms and '
+                          '1.2 times for all other carbon atoms.'), self.paragraph.text)
 
     def test_disorder(self):
         cif = type('CifContainer', (object,), {'dsr_used': True})()
